# flytwo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  cli.py  client.py  compose-shared.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_api.txt  requirements_tests.txt  setup.py
flytwo/: __init__.py  bot.py  cli.py  client.py  conf.py  db.py  notifier.py
flytwo/migrations/: env.py
flytwo/migrations/versions/: 7e1ba3d50b55_.py
migrations/: env.py
migrations/versions/: 16a547ce6c45_.py  2cdf3ea4b0c5_.py  827618db3e02_.py  9da5c618b417_.py  a2b3c4d5e6f7_.py  b3c4d5e6f7a8_.py  b7464f009125_.py  be5bea8ab064_.py  cb8f8518e6fe_.py  ce58ffc9544d_.py  e8f1a2b3c4d5_.py  f1a2b3c4d5e6_.py  fb59b70078aa_.py  fef2b7dadfb0_.py
src/: airline.py  bot.py  cache.py  change_detector.py  client.py  conf.py  currency_converter.py  dal.py  db.py  dispatcher.py  fetcher.py  logs.py  notifier.py  parser.py  plotter.py  price.py  task_cleanup.py  task_notify.py  url_constructor.py
src/api/: api.py  auth.py  cache_utils.py  common.py  conf.py  converters.py  models.py  parsers.py  services.py  validators.py
src/bot/: bot.py  notifier.py  parser.py
src/cli/: cli.py
src/client/: cli.py  client.py  currency.py
src/fly_client/: cli.py  client.py
src/plugins/: __init__.py
src/plugins/flyone/: __init__.py  airline.py  client.py  constructor.py  parser.py
src/plugins/wizzair/: __init__.py  airline.py  client.py  constructor.py  parser.py
tests/: conftest.py  test_api.py  test_dal.py  test_notifier.py  test_parser.py
tests/flyone/: test_parser.py
tests/wizzair/: test_client.py  test_parser.py
