[project]
name = "flytwo"
version = "0.1.0"
description = "Flyone HTTP Client"
readme = "README.md"
authors = [
    { name = "Ilya Sagaidac", email = "m.s.v.inkognito@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "aiogram",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "python-dotenv",
    "redis",
    "pydantic",
    "python-json-logger",
    "pycountry",
    "matplotlib",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]",
    "pydantic-settings",
    "fastapi-cache2",
    "pyjwt",
]
cli = [
    "click",
    "setuptools",
]

[project.scripts]
flytwo = "client.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-dotenv",
    "pytest-mock",
    "fakeredis",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]
