[project]
name = "flytwo"
version = "0.1.0"
description = "Flyone HTTP Client"
readme = "README.md"
authors = [
    { name = "Ilya Sagaidac", email = "m.s.v.inkognito@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "aiogram",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "python-dotenv",
    "redis",
    "pydantic",
    "python-json-logger",
    "pycountry",
    "matplotlib",
    "python-dateutil",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]",
    "pydantic-settings",
    "fastapi-cache2",
    "pyjwt",
]
cli = [
    "click",
    "setuptools",
]

[project.scripts]
flytwo = "client.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-dotenv",
    "pytest-mock",
    "fakeredis",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    ".env",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E402",   # imports at the top of the file
    "E501",   # line too long (handled by formatter)
    "E731",   # Do not assign a `lambda` expression, use a `def` - rule ignored
    "RUF005", # (*list_display, 'is_deleted') instead of concatenation list_display + ('is_deleted',) - rule ignored
    "RUF010", # f'Connection error: {e}' -> f'Connection error: {e!s}'
    "SIM105", # Use `contextlib.suppress(TypeError)` instead of `try`-`except`-`pass` - rule ignored
    "SIM108", # Use `getattr` with a default value instead of catching `AttributeError` - rule ignored
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
]

[tool.ruff.format]
quote-style = "single"
